[package]
name = "tigershark"
version = "0.1.0"
edition = "2021"

# reduce binary file size
[profile.release]
strip = true
lto = true
codegen-units = 1


[dependencies]
bson = "2.3.0"
clap = {version = "3.2.1" , features = ["derive"] }
futures = "0.3.21"
mongodb = "2.2.2"
serde = { version = "1.0", features = ["derive"]}
serde_json = "1.0"
tokio = { version = "1.19.2", features = ["full"]}
